--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </div>
             <div class="container-padding">
                 <h1>Row 3 Column 2</h1>
+                <p class="paragraph">This is all thanks to our Professor: Lucas Phan!</p>
             </div>
             <div class="container-padding">
                 <h1>Row 3 Column 3</h1>
