added some minor changes

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <h1>Row 2 Column 1</h1>
                 <!-- -- Image from Google -- -->
                 <img class="bulldog" src="./1200px-Fresno_State_Bulldogs_logo.svg.png" alt="bulldog">
+                <p class="hover">Hover over me!</p>
             </div>
             <div class="container-padding alter2">
                 <h1 class="r2c2">Row 2 Column 2</h1>
@@ -48,6 +49,7 @@
                 <h1>Row 2 Column 3</h1>
                 <!-- -- Image from Google -- -->
                 <img class="bulldog" src="./1200px-Fresno_State_Bulldogs_logo.svg.png" alt="bulldog">
+                <p class="hover">Hover over me!</p>
             </div>
         </div>
 
